# pixiv-artist-recsys

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  start.py  计划书.md
docs/: backlog.md  mcp-chrome-devtools-troubleshooting.md  mcp-tools.md
examples/: manifest-daily.json  manifest-deep.json
issues/: 2026-03-17_16-51-15-pixiv-artist-recsys-bootstrap.csv  2026-03-17_18-16-49-pixiv-auth-client-ingest.csv  2026-03-17_18-29-05-pixiv-profile-candidate-ranking.csv  2026-03-17_18-46-02-pixiv-live-pipeline.csv  2026-03-17_18-57-08-pixiv-quality-guardrails.csv  2026-03-17_19-23-33-pixiv-proxy-failover.csv  2026-03-17_19-32-57-pixiv-feedback-audit.csv  2026-03-17_19-48-04-pixiv-runtime-diversity-export.csv  2026-03-17_20-05-10-pixiv-api-config-runtime.csv  2026-03-17_20-19-08-pixiv-application-live-api.csv  2026-03-17_20-33-50-pixiv-job-runner-manifest.csv  2026-03-18_09-13-04-pixiv-refresh-inspector.csv  README.md
plan/: 2026-03-17_16-51-15-pixiv-artist-recsys-bootstrap.md  2026-03-17_18-16-49-pixiv-auth-client-ingest.md  2026-03-17_18-29-05-pixiv-profile-candidate-ranking.md  2026-03-17_18-46-02-pixiv-live-pipeline.md  2026-03-17_18-57-08-pixiv-quality-guardrails.md  2026-03-17_19-23-33-pixiv-proxy-failover.md  2026-03-17_19-32-57-pixiv-feedback-audit.md  2026-03-17_19-48-04-pixiv-runtime-diversity-export.md  2026-03-17_20-05-10-pixiv-api-config-runtime.md  2026-03-17_20-19-08-pixiv-application-live-api.md  2026-03-17_20-33-50-pixiv-job-runner-manifest.md  2026-03-18_09-13-04-pixiv-refresh-inspector.md
scripts/: eval_recommend_export.py  (+1 more)
(+102 files in other folders)
