[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixiv-artist-recsys"
version = "0.2.0"
description = "Local-first Pixiv artist recommendation UID discovery system"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "inliver" }]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
